test/features/errors/semantic/e1068_inconsistent_bindings.spl
# E1068: Inconsistent Bindings

Feature: E1068 - Inconsistent Bindings in Pattern Alternatives
  As a Simple compiler
  I want to detect inconsistent bindings across pattern alternatives
  So that all alternatives in an or-pattern bind the same variables

  Background:
    Given I have the Simple compiler

  Scenario: Or-pattern with different variable names
    When I compile:
      '''
      enum Result:
        Ok(i32)
        Err(str)

      fn test(r: Result):
        match r:
          Ok(x) | Err(y): print(x)  # Error: x vs y
          _: print("unknown")
      '''
    Then I should see error E1068 at line 6
    And the error message should be "inconsistent bindings in pattern alternatives"
    And the label should indicate "inconsistent pattern bindings"
    And the help should suggest "all pattern alternatives must bind the same variables"

  Scenario: Or-pattern with missing binding
    When I compile:
      '''
      fn test(opt: Option<i32>):
        match opt:
          Some(x) | None: x  # Error: None doesn't bind x
      '''
    Then I should see error E1068 at line 3

  Scenario: Or-pattern with extra binding
    When I compile:
      '''
      fn test(value: i32):
        match value:
          0 | x: x  # Error: first pattern doesn't bind, second does
      '''
    Then I should see error E1068 at line 3

  Scenario: Valid or-pattern with consistent bindings
    When I compile:
      '''
      fn test(value: i32):
        match value:
          1 | 2 | 3: print("small")  # OK: no bindings
          _: print("other")
      '''
    Then compilation should succeed

  Scenario: Valid or-pattern with same variable
    When I compile:
      '''
      enum Shape:
        Circle(f64)
        Square(f64)

      fn test(s: Shape):
        match s:
          Circle(r) | Square(r): print("size: {r}")  # OK: both bind r
      '''
    Then compilation should succeed

  Scenario: Complex nested inconsistent bindings
    When I compile:
      '''
      fn test(pair: (i32, i32)):
        match pair:
          (a, b) | (a, _): a  # Error: b vs no b
      '''
    Then I should see error E1068

  Scenario: Valid nested or-patterns
    When I compile:
      '''
      fn test(pair: (i32, i32)):
        match pair:
          (0, y) | (1, y): y  # OK: both bind y
          _: 0
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test(opt: Option<i32>):
        match opt:
          Some(x) | None: x
      '''
    Then I should see error E1068
    And the error message should contain "일관되지 않은 바인딩"
